; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_l3ni1.c_l3ni1_setup_ack_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_l3ni1.c_l3ni1_setup_ack_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l3_process = type { i32 }

@T302 = common dso_local global i32 0, align 4
@CC_T302 = common dso_local global i32 0, align 4
@MT_SETUP_ACKNOWLEDGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l3_process*, i32, i8*)* @l3ni1_setup_ack_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l3ni1_setup_ack_req(%struct.l3_process* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.l3_process*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.l3_process* %0, %struct.l3_process** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.l3_process*, %struct.l3_process** %4, align 8
  %8 = call i32 @newl3state(%struct.l3_process* %7, i32 25)
  %9 = load %struct.l3_process*, %struct.l3_process** %4, align 8
  %10 = getelementptr inbounds %struct.l3_process, %struct.l3_process* %9, i32 0, i32 0
  %11 = call i32 @L3DelTimer(i32* %10)
  %12 = load %struct.l3_process*, %struct.l3_process** %4, align 8
  %13 = getelementptr inbounds %struct.l3_process, %struct.l3_process* %12, i32 0, i32 0
  %14 = load i32, i32* @T302, align 4
  %15 = load i32, i32* @CC_T302, align 4
  %16 = call i32 @L3AddTimer(i32* %13, i32 %14, i32 %15)
  %17 = load %struct.l3_process*, %struct.l3_process** %4, align 8
  %18 = load i32, i32* @MT_SETUP_ACKNOWLEDGE, align 4
  %19 = call i32 @l3ni1_message(%struct.l3_process* %17, i32 %18)
  ret void
}

declare dso_local i32 @newl3state(%struct.l3_process*, i32) #1

declare dso_local i32 @L3DelTimer(i32*) #1

declare dso_local i32 @L3AddTimer(i32*, i32, i32) #1

declare dso_local i32 @l3ni1_message(%struct.l3_process*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
